--- a/.gitignore
+++ b/.gitignore
@@ -245,6 +245,8 @@ ClientBin/
 *.pfx
 *.publishsettings
 orleans.codegen.cs
+API/bin/
+API/obj/
 
 # Including strong name files can present a security risk
 # (https://github.com/github/gitignore/pull/2483#issue-259490424)
