api connected to database

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=lcbd;User=root;Password=12345678;Connection Timeout=30;"
+  }
 }
